// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu closed 1`] = `
<div
  className="Menu__Container-mw2r80-0 cClSYa"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom color 1`] = `
<div
  className="Menu__Container-mw2r80-0 eJPnTD"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom duration 1`] = `
<div
  className="Menu__Container-mw2r80-0 fbRzRZ"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu default 1`] = `
<div
  className="Menu__Container-mw2r80-0 fbRzRZ"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left 1`] = `
<div
  className="Menu__Container-mw2r80-0 dsDlrd"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left closed 1`] = `
<div
  className="Menu__Container-mw2r80-0 kNLZYB"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;
